Fixed search bar css on small widths

--- a/static/src/css/app.scss
+++ b/static/src/css/app.scss
@@ -10,6 +10,7 @@ $offwhite: hsla(0,0%,100%,.7);
 $font: "Helvetica Neue", "Helvetica", "sans-sarif";
 $font-small: 12px;
 $font-medium: 14px;
+$font-large: 16px;
 
 body {
   background-color: $grey;
@@ -103,17 +104,22 @@ body {
 }
 
 .search {
+  max-width: 100%;
   input {
     border: none;
     border-radius: 3px;
     background-color: #484B51;
     color: white;
-    height: 25px;
+    height: 35px;
     width: 400px;
-    font-size: 16px;
+    max-width: 100%;
     padding: 5px 12px;
     margin-top: 12px;
     margin-bottom: 10px;
+    box-sizing: border-box;
+    font-size: $font-large;
+    letter-spacing: .6px;
+    font-weight: 300;
   }
 
   input:focus {
